--- a/.github/workflows/refapp-3x-login.yml
+++ b/.github/workflows/refapp-3x-login.yml
@@ -1,9 +1,9 @@
 name: RefApp 3.x Login
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
   repository_dispatch:
     types: [ qa ]
   workflow_dispatch:
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./qaframework-bdd-tests
+        working-directory: ./
     steps:
       - name: Checkout qaframework
         uses: actions/checkout@master
@@ -35,4 +35,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: Screen recordings of failed tests
-          path: qaframework-bdd-tests/cypress/videos/refapp-3.x
+          path: cypress/videos/refapp-3.x
