--- a/.github/workflows/refapp-3x-login.yml
+++ b/.github/workflows/refapp-3x-login.yml
@@ -10,12 +10,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./
     steps:
       - name: Checkout qaframework
-        uses: actions/checkout@master
+        uses: actions/checkout@main
         with:
           repository: ${{github.repository}}
       - name: Run db and web containers
