--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
   },
   "scripts": {
     "refappCypress": "./node_modules/.bin/cypress-tags run -eTAGS='@cypress and not @microfrontend'",
-    "refapp3Login": "cypress run --spec src/test/resources/features/refapp-3.x/01-login/login.feature",
-    "refapp3PatientRegistration": "cypress run --spec src/test/resources/features/refapp-3.x/02-patient-registration/patient-registration.feature",
-    "refapp3PatientSearch": "cypress run --spec src/test/resources/features/refapp-3.x/06-patient-search/patient-search.feature",
-    "refapp3Settings": "cypress run --spec src/test/resources/features/refapp-3.x/03-settings/settings.feature",
-    "refapp3ClinicalVisit": "cypress run --spec src/test/resources/features/refapp-3.x/04-clinical-visit/clinical-visit.feature",
-    "refapp3VitalsAndTriage": "cypress run --spec src/test/resources/features/refapp-3.x/05-vitals-and-triage/vitals-and-triage.feature",
-    "refappOclSubscriptionModule": "cypress run --spec src/test/resources/features/ocl/ocl-subscription-module.feature"
+    "refapp3Login": "cypress run --spec resources/features/refapp-3.x/01-login/login.feature",
+    "refapp3PatientRegistration": "cypress run --spec resources/features/refapp-3.x/02-patient-registration/patient-registration.feature",
+    "refapp3PatientSearch": "cypress run --spec resources/features/refapp-3.x/06-patient-search/patient-search.feature",
+    "refapp3Settings": "cypress run --spec resources/features/refapp-3.x/03-settings/settings.feature",
+    "refapp3ClinicalVisit": "cypress run --spec resources/features/refapp-3.x/04-clinical-visit/clinical-visit.feature",
+    "refapp3VitalsAndTriage": "cypress run --spec resources/features/refapp-3.x/05-vitals-and-triage/vitals-and-triage.feature"
   },
   "devDependencies": {
     "@testing-library/cypress": "^8.0.0",
