--- a/docker/docker-compose-refqa-3x.yml
+++ b/docker/docker-compose-refqa-3x.yml
@@ -1,18 +1,20 @@
 version: "3.7"
 
 services:
-  # Proxy
-  proxy:
-    image: openmrs/openmrs-reference-application-3-gateway:latest
+  gateway:
+    image: openmrs/openmrs-reference-application-3-gateway:${TAG:-nightly}
+    build:
+      context: ./gateway
     depends_on:
       - frontend
-      - openmrs
+      - backend
     ports:
-      - "80:80"
+      - 80:80
 
-  # Frontend
   frontend:
-    image: openmrs/openmrs-reference-application-3-frontend:latest
+    image: openmrs/openmrs-reference-application-3-frontend:${TAG:-nightly}
+    build:
+      context: ./frontend
     environment:
       SPA_PATH: /openmrs/spa
       API_URL: /openmrs
@@ -21,9 +23,10 @@ services:
       test: ["CMD", "curl", "-f", "http://localhost/"]
       timeout: 5s
 
-  # OpenMRS:
-  openmrs:
-    image: openmrs/openmrs-reference-application-3-backend:latest
+  backend:
+    image: openmrs/openmrs-reference-application-3-backend:${TAG:-nightly}
+    build:
+      context: .
     depends_on:
       - db
     environment:
@@ -44,7 +47,7 @@ services:
 
   # MariaDB
   db:
-    image: mariadb:10
+    image: mariadb:10.8.2
     command: "mysqld --character-set-server=utf8 --collation-server=utf8_general_ci"
     environment:
       MYSQL_DATABASE: openmrs
