--- a/docker/docker-compose-refqa-3x.yml
+++ b/docker/docker-compose-refqa-3x.yml
@@ -1,20 +1,18 @@
 version: "3.7"
 
 services:
-  gateway:
-    image: openmrs/openmrs-reference-application-3-gateway:${TAG:-nightly}
-    build:
-      context: ./gateway
+  # Proxy
+  proxy:
+    image: openmrs/openmrs-reference-application-3-gateway:latest
     depends_on:
       - frontend
-      - backend
+      - openmrs
     ports:
-      - 80:80
+      - "80:80"
 
+  # Frontend
   frontend:
-    image: openmrs/openmrs-reference-application-3-frontend:${TAG:-nightly}
-    build:
-      context: ./frontend
+    image: openmrs/openmrs-reference-application-3-frontend:latest
     environment:
       SPA_PATH: /openmrs/spa
       API_URL: /openmrs
@@ -23,10 +21,9 @@ services:
       test: ["CMD", "curl", "-f", "http://localhost/"]
       timeout: 5s
 
-  backend:
-    image: openmrs/openmrs-reference-application-3-backend:${TAG:-nightly}
-    build:
-      context: .
+  # OpenMRS:
+  openmrs:
+    image: openmrs/openmrs-reference-application-3-backend:latest
     depends_on:
       - db
     environment:
@@ -47,7 +44,7 @@ services:
 
   # MariaDB
   db:
-    image: mariadb:10.8.2
+    image: mariadb:10
     command: "mysqld --character-set-server=utf8 --collation-server=utf8_general_ci"
     environment:
       MYSQL_DATABASE: openmrs
