--- a/.github/workflows/refapp-3x-patient-registration.yml
+++ b/.github/workflows/refapp-3x-patient-registration.yml
@@ -1,20 +1,24 @@
 name: RefApp 3.x Patient Registration
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
   repository_dispatch:
     types: [ qa ]
   workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./qaframework-bdd-tests
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout qaframework
+      - uses: actions/checkout@main
+        with :
+          repository: ${{github.repository}}
+      - name: Run db and web container
+        run: docker-compose -f docker/docker-compose-refqa-3x.yml up -d
+      - name: Wait for Openmrs instant to start
+        run: while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' http://localhost:8080/openmrs/login.htm)" != "200" ]]; do sleep 10; done
       - name: Using Node.js
         uses: actions/setup-node@v1
         with:
