Minor fixes in workflow

--- a/.github/workflows/refapp-3x-patient-registration.yml
+++ b/.github/workflows/refapp-3x-patient-registration.yml
@@ -12,12 +12,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout qaframework
-      - uses: actions/checkout@main
+        uses: actions/checkout@main
         with :
           repository: ${{github.repository}}
       - name: Run db and web container
         run: docker-compose -f docker/docker-compose-refqa-3x.yml up -d
-      - name: Wait for Openmrs instant to start
+      - name: Wait for Openmrs instance to start
         run: while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' http://localhost:8080/openmrs/login.htm)" != "200" ]]; do sleep 10; done
       - name: Using Node.js
         uses: actions/setup-node@v1
