--- a/docker/docker-compose-refqa-3x.yml
+++ b/docker/docker-compose-refqa-3x.yml
@@ -1,18 +1,16 @@
 version: "3.7"
 
 services:
-  # Proxy
-  proxy:
-    image: openmrs/openmrs-reference-application-3-gateway:latest
+  gateway:
+    image: openmrs/openmrs-reference-application-3-gateway:nightly
     depends_on:
       - frontend
-      - openmrs
+      - backend
     ports:
-      - "80:80"
+      - 80:80
 
-  # Frontend
   frontend:
-    image: openmrs/openmrs-reference-application-3-frontend:latest
+    image: openmrs/openmrs-reference-application-3-frontend:nightly
     environment:
       SPA_PATH: /openmrs/spa
       API_URL: /openmrs
@@ -21,9 +19,8 @@ services:
       test: ["CMD", "curl", "-f", "http://localhost/"]
       timeout: 5s
 
-  # OpenMRS:
-  openmrs:
-    image: openmrs/openmrs-reference-application-3-backend:latest
+  backend:
+    image: openmrs/openmrs-reference-application-3-backend:nightly
     depends_on:
       - db
     environment:
@@ -31,7 +28,7 @@ services:
       OMRS_CONFIG_AUTO_UPDATE_DATABASE: "true"
       OMRS_CONFIG_CREATE_TABLES: "true"
       OMRS_CONFIG_CONNECTION_SERVER: db
-      OMRS_CONFIG_CONNECTION_DATABASE: openmrs
+      OMRS_CONFIG_CONNECTION_DATABASE: ${OPENMRS_DB:-openmrs}
       OMRS_CONFIG_CONNECTION_USERNAME: ${OPENMRS_DB_USER:-openmrs}
       OMRS_CONFIG_CONNECTION_PASSWORD: ${OPENMRS_DB_PASSWORD:-openmrs}
     healthcheck:
@@ -40,14 +37,14 @@ services:
     volumes:
       - openmrs-data:/openmrs/data
     ports:
-      - "8080:8080"
+      - 8080:8080
 
   # MariaDB
   db:
-    image: mariadb:10
+    image: mariadb:10.8.2
     command: "mysqld --character-set-server=utf8 --collation-server=utf8_general_ci"
     environment:
-      MYSQL_DATABASE: openmrs
+      MYSQL_DATABASE: ${OPENMRS_DB:-openmrs}
       MYSQL_USER: ${OPENMRS_DB_USER:-openmrs}
       MYSQL_PASSWORD: ${OPENMRS_DB_PASSWORD:-openmrs}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-openmrs}
