--- a/.github/workflows/refapp-3x-vitals-and_triage.yml
+++ b/.github/workflows/refapp-3x-vitals-and_triage.yml
@@ -32,4 +32,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: Screen recordings of failed tests
-          path: qaframework-bdd-tests/cypress/videos/refapp-3.x
+          path: cypress/videos/refapp-3.x
