--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "@testing-library/cypress": "^8.0.0",
     "@types/uuid": "3.4.7",
-    "cypress": "^10.4.0",
+    "cypress": "10.4.0",
     "cypress-cucumber-preprocessor": "^4.0.1",
     "cypress-file-upload": "^5.0.8"
   },
