--- a/package.json
+++ b/package.json
@@ -1,31 +1,5 @@
 {
-  "name": "openmrs-test-3refapp",
-  "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": ">=14.15.5",
-    "npm": ">=7.5.3"
-  },
-  "scripts": {
-    "refappCypress": "./node_modules/.bin/cypress-tags run -eTAGS='@cypress and not @microfrontend'",
-    "refapp3Login": "cypress run --spec resources/features/refapp-3.x/01-login/login.feature",
-    "refapp3Logout": "cypress run --spec resources/features/refapp-3.x/07-logout/logout.feature",
-    "refapp3PatientRegistration": "cypress run --spec resources/features/refapp-3.x/02-patient-registration/patient-registration.feature",
-    "refapp3PatientSearch": "cypress run --spec resources/features/refapp-3.x/06-patient-search/patient-search.feature",
-    "refapp3Settings": "cypress run --spec resources/features/refapp-3.x/03-settings/settings.feature",
-    "refapp3ClinicalVisit": "cypress run --spec resources/features/refapp-3.x/04-clinical-visit/clinical-visit.feature",
-    "refapp3VitalsAndTriage": "cypress run --spec resources/features/refapp-3.x/05-vitals-and-triage/vitals-and-triage.feature"
-  },
-  "devDependencies": {
-    "@testing-library/cypress": "^8.0.0",
-    "@types/uuid": "3.4.7",
-    "cypress": "^10.4.0",
-    "cypress-cucumber-preprocessor": "^4.0.1",
-    "cypress-file-upload": "^5.0.8"
-  },
-  "cypress-cucumber-preprocessor": {
-    "step_definitions": "cypress/integration/cucumber/step_definitions"
-  },
   "description": "![Build Status](https://ci.openmrs.org/plugins/servlet/wittified/build-status/CONTRIB-QA)",
   "main": "index.js",
   "repository": {
@@ -40,5 +14,15 @@
   "bugs": {
     "url": "https://github.com/openmrs/openmrs-test-3refapp/issues"
   },
-  "homepage": "https://github.com/openmrs/openmrs-test-3refapp#readme"
+  "homepage": "https://github.com/openmrs/openmrs-test-3refapp#readme",
+  "engines": {
+    "node": ">=14.15.5",
+    "npm": ">=7.5.3"
+  },
+  "workspaces": [
+    "packages/*"
+  ],
+  "scripts": {},
+  "devDependencies": {
+  }
 }
