--- a/.github/workflows/refapp-3x-patient-registration.yml
+++ b/.github/workflows/refapp-3x-patient-registration.yml
@@ -24,14 +24,14 @@ jobs:
       - name: Using Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '12.x' 
+          node-version: '12.x'
       - name: Installing dependencies
-        run: npm install
+        run: yarn install
       - name: Run patient registration workflow tests
-        run: npm run refapp3PatientRegistration
+        run: cd packages/cypress && yarn run refapp3PatientRegistration
       - name: Upload screen recordings of failed tests
         if: ${{ failure() }}
         uses: actions/upload-artifact@v2
         with:
           name: Screen recordings of failed tests
-          path: qaframework-bdd-tests/cypress/videos/refapp-3.x
+          path: packages/cypress/cypress/videos/refapp-3.x
