--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -4,8 +4,7 @@
   "version": "0.1.0",
   "scripts": {
     "test": "playwright test --headed --project=chromium",
-    "debug": "npm run test -- --debug",
-    "format": "prettier -w ./src"
+    "debug": "npm run test -- --debug"
   },
   "devDependencies": {
     "@playwright/test": "1.24.0",
