--- a/packages/playwright/.env
+++ b/packages/playwright/.env
@@ -1,3 +1,6 @@
+# This is an example environment file for configuring dynamic values.
+# This can be removed or changed with better solutions in the future.
+# It should *only* be kept as long as there are no sensitive values in here.
 UI_BASE_URL=https://dev3.openmrs.org/openmrs/spa/
 WS_BASE_URL=https://dev3.openmrs.org/openmrs/ws/
 USER_ADMIN_USERNAME=Admin
