--- a/.github/workflows/refapp-3x-logout.yml
+++ b/.github/workflows/refapp-3x-logout.yml
@@ -24,14 +24,14 @@ jobs:
       - name: Using Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '12.x'
+          node-version: '16.x'
       - name: Installing dependencies
-        run: npm install
+        run: yarn install
       - name: Run logout workflow tests
-        run: npm run refapp3Logout
+        run: cd packages/cypress && yarn refapp3Logout
       - name: Upload screen recordings of failed tests
         if: ${{ failure() }}
         uses: actions/upload-artifact@v2
         with:
           name: Screen recordings of failed tests
-          path: cypress/videos/refapp-3.x
+          path: packages/cypress/cypress/videos/refapp-3.x
