--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,15 @@ qaframework.iml
 target/
 node/
 package-lock.json
-cypress/screenshots
-cypress/videos
+**/cypress/screenshots/
+**/cypress/videos
 node_modules/
 openmrs.log
 .classpath
 .DS_Store
+*.sql
+
+# Playwright output
+playwright-report
+playwright/.cache/*
+test-results
