--- a/.github/workflows/refapp-3x-vitals-and-triage.yml
+++ b/.github/workflows/refapp-3x-vitals-and-triage.yml
@@ -22,14 +22,14 @@ jobs:
       - name: Using Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: '12.x'
+          node-version: '16.x'
       - name: Installing dependencies
-        run: npm install
+        run: yarn install
       - name: Run Vitals and triage workflow tests
-        run: npm run refapp3VitalsAndTriage
+        run: cd packages/cypress && yarn refapp3VitalsAndTriage
       - name: Upload screen recordings of failed tests
         if: ${{ failure() }}
         uses: actions/upload-artifact@v2
         with:
           name: Screen recordings of failed tests
-          path: cypress/videos/refapp-3.x
+          path: packages/cypress/cypress/videos
