Write E2E automated workflow to test care programm feature in o3

--- a/packages/cypress/package.json
+++ b/packages/cypress/package.json
@@ -15,7 +15,8 @@
     "refapp3FormManagement": "cypress run --spec resources/features/refapp-3.x/08-form-management/form-management.feature",
     "refapp3PatientConditions": "cypress run --spec resources/features/refapp-3.x/12-patient-conditions/patient-conditions.feature",
     "refapp3PatientAllergies": "cypress run --spec resources/features/refapp-3.x/13-patient-allergies/patient-allergies.feature",
-    "refapp3Appointments": "cypress run --spec resources/features/refapp-3.x/14-appointments/appointments.feature"
+    "refapp3Appointments": "cypress run --spec resources/features/refapp-3.x/14-appointments/appointments.feature",
+    "refapp3CarePrograms": "cypress run --spec resources/features/refapp-3.x/10-care-programs/care-programs.feature"
   },
   "devDependencies": {
     "@testing-library/cypress": "^8.0.0",
