--- a/packages/cypress/package.json
+++ b/packages/cypress/package.json
@@ -19,7 +19,8 @@
     "refapp3PatientConditions": "cypress run --spec resources/features/refapp-3.x/12-patient-conditions/patient-conditions.feature",
     "refapp3PatientAllergies": "cypress run --spec resources/features/refapp-3.x/13-patient-allergies/patient-allergies.feature",
     "refapp3Appointments": "cypress run --spec resources/features/refapp-3.x/14-appointments/appointments.feature",
-    "refapp3CarePrograms": "cypress run --spec resources/features/refapp-3.x/10-care-programs/care-programs.feature"
+    "refapp3CarePrograms": "cypress run --spec resources/features/refapp-3.x/10-care-programs/care-programs.feature",
+    "refapp3Medications": "cypress run --spec resources/features/refapp-3.x/11-medications/medications.feature"
   },
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^12.2.0",
