O3-1459: Create E2E automated workflow to test patient conditions recoring feature in o3 (#17)
* Create patient condtion E2E test

* Fix login test

* Fix patient registration test

* Fix video recorder path in workflow files

* Minor changes in patient registration test

--- a/.github/workflows/refapp-3x-patient-conditions.yml
+++ b/.github/workflows/refapp-3x-patient-conditions.yml
@@ -1,4 +1,4 @@
-name: RefApp 3.x Logout
+name: RefApp 3.x Patient Conditions
 on:
   schedule:
     - cron: "0 0 * * *"
@@ -27,8 +27,8 @@ jobs:
           node-version: '16.x'
       - name: Installing dependencies
         run: yarn install
-      - name: Run logout workflow tests
-        run: cd packages/cypress && yarn refapp3Logout
+      - name: Run patient conditions workflow tests
+        run: cd packages/cypress && yarn refapp3PatientConditions
       - name: Upload screen recordings of failed tests
         if: ${{ failure() }}
         uses: actions/upload-artifact@v2
