--- a/packages/cypress/package.json
+++ b/packages/cypress/package.json
@@ -13,7 +13,8 @@
     "refapp3ClinicalVisit": "cypress run --spec resources/features/refapp-3.x/04-clinical-visit/clinical-visit.feature",
     "refapp3VitalsAndTriage": "cypress run --spec resources/features/refapp-3.x/05-vitals-and-triage/vitals-and-triage.feature",
     "refapp3FormManagement": "cypress run --spec resources/features/refapp-3.x/08-form-management/form-management.feature",
-    "refapp3PatientConditions": "cypress run --spec resources/features/refapp-3.x/12-patient-conditions/patient-conditions.feature"
+    "refapp3PatientConditions": "cypress run --spec resources/features/refapp-3.x/12-patient-conditions/patient-conditions.feature",
+    "refapp3PatientAllergies": "cypress run --spec resources/features/refapp-3.x/13-patient-allergies/patient-allergies.feature"
   },
   "devDependencies": {
     "@testing-library/cypress": "^8.0.0",
