--- a/.github/workflows/refapp-3x-user-settings.yml
+++ b/.github/workflows/refapp-3x-user-settings.yml
@@ -1,5 +1,7 @@
 name: RefApp 3.x User Settings
 on:
+  schedule:
+    - cron: "0 0 * * *"
   push:
     branches: [ main ]
   pull_request:
@@ -32,4 +34,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: Screen recordings of failed tests
-          path: packages/cypress/cypress/videos/refapp-3.x
+          path: packages/cypress/cypress/videos
