O3-1523: migrate to @badeball / cypress-cucumber-preprocessor
	The reasons why tests were failing when executed as a whole is cuz tags used in the before hook were not working, probably because we were using an unmaintained cucumber-cypress plugin.
	That said, I have just introduced a file packages/cypress/cypress/integration/common/refapp-3.x/common.js to keep track of the common scenarios and common pre-test activities like creating a patient as addition to upgrading our cypress-cucumber plugin.

--- a/packages/cypress/cypress/tsconfig.json
+++ b/packages/cypress/cypress/tsconfig.json
@@ -3,9 +3,9 @@
   "compilerOptions": {
     "strict": true,
     "baseUrl": "../node_modules",
-    "target": "es5",
+    "target": "ES6",
     "lib": [
-      "es5",
+      "ES6",
       "dom"
     ],
     "types": [
