--- a/packages/cypress/package.json
+++ b/packages/cypress/package.json
@@ -4,7 +4,12 @@
   "name": "openmrs-test-3refapp-cypress",
   "version": "0.1.0",
   "scripts": {
-    "refappCypress": "cypress run --spec 'resources/features/refapp-3.x/**/*.feature'",
+    "delete:reports": "rm cypress/results/* || true",
+    "combine:reports": "jrm cypress/results/combined-report.xml \"cypress/results/*.xml\"",
+    "prereport": "npm run delete:reports",
+    "report": "cypress run --reporter cypress-multi-reporters --reporter-options configFile=reporter-config.json",
+    "postreport": "npm run combine:reports",
+    "refappCypress": "cypress run --spec 'resources/features/refapp-3.x/**/*.feature' --reporter cypress-multi-reporters --reporter-options configFile=reporter-config.json",
     "refapp3Login": "cypress run --spec resources/features/refapp-3.x/01-login/login.feature",
     "refapp3Logout": "cypress run --spec resources/features/refapp-3.x/07-logout/logout.feature",
     "refapp3PatientRegistration": "cypress run --spec resources/features/refapp-3.x/02-patient-registration/patient-registration.feature",
@@ -25,7 +30,11 @@
     "@types/uuid": "3.4.7",
     "cypress": "^10.4.0",
     "cypress-file-upload": "^5.0.8",
-    "esbuild": "^0.15.7"
+    "cypress-multi-reporters": "^1.6.1",
+    "esbuild": "^0.15.7",
+    "junit-report-merger": "^4.0.0",
+    "mocha": "^10.1.0",
+    "mocha-junit-reporter": "^2.1.0"
   },
   "cypress-cucumber-preprocessor": {
     "stepDefinitions": [
