revert to using mocha-junit-reporter

--- a/packages/cypress/package.json
+++ b/packages/cypress/package.json
@@ -6,10 +6,9 @@
   "scripts": {
     "delete:reports": "rm cypress/results/* || true",
     "combine:reports": "jrm cypress/results/combined-report.xml \"cypress/results/*.xml\"",
-    "prereport": "npm run delete:reports",
-    "report": "cypress run --reporter cypress-multi-reporters --reporter-options configFile=reporter-config.json",
-    "postreport": "npm run combine:reports",
-    "refappCypress": "cypress run --spec 'resources/features/refapp-3.x/**/*.feature' --reporter cypress-multi-reporters --reporter-options configFile=reporter-config.json",
+    "prerefappCypress": "npm run delete:reports",
+    "refappCypress": "cypress run --spec 'resources/features/refapp-3.x/**/*.feature' --reporter junit --reporter-options mochaFile='cypress/results/test-[hash].xml',outputs=true",
+    "postrefappCypress": "npm run combine:reports",
     "refapp3Login": "cypress run --spec resources/features/refapp-3.x/01-login/login.feature",
     "refapp3Logout": "cypress run --spec resources/features/refapp-3.x/07-logout/logout.feature",
     "refapp3PatientRegistration": "cypress run --spec resources/features/refapp-3.x/02-patient-registration/patient-registration.feature",
@@ -30,7 +29,6 @@
     "@types/uuid": "3.4.7",
     "cypress": "^10.4.0",
     "cypress-file-upload": "^5.0.8",
-    "cypress-multi-reporters": "^1.6.1",
     "esbuild": "^0.15.7",
     "junit-report-merger": "^4.0.0",
     "mocha": "^10.1.0",
