--- a/packages/cypress/package.json
+++ b/packages/cypress/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "delete:reports": "rm cypress/results/* || true",
     "combine:reports": "jrm cypress/results/combined-report.xml \"cypress/results/*.xml\"",
-    "prerefappCypress": "npm run delete:reports",
-    "refappCypress": "cypress run --spec 'resources/features/refapp-3.x/**/*.feature' --reporter junit --reporter-options mochaFile='cypress/results/test-[hash].xml',outputs=true || true",
-    "postrefappCypress": "npm run combine:reports",
+    "allCypressTest": "cypress run --spec 'resources/features/refapp-3.x/**/*.feature' --reporter junit --reporter-options mochaFile='cypress/results/test-[hash].xml',outputs=true",
+    "refappCypress": "npm-run-all delete:reports allCypressTest combine:reports -c",
     "refapp3Login": "cypress run --spec resources/features/refapp-3.x/01-login/login.feature",
     "refapp3Logout": "cypress run --spec resources/features/refapp-3.x/07-logout/logout.feature",
     "refapp3PatientRegistration": "cypress run --spec resources/features/refapp-3.x/02-patient-registration/patient-registration.feature",
