--- a/packages/cypress/package.json
+++ b/packages/cypress/package.json
@@ -29,9 +29,7 @@
     "cypress": "^10.4.0",
     "cypress-file-upload": "^5.0.8",
     "esbuild": "^0.15.7",
-    "junit-report-merger": "^4.0.0",
-    "mocha": "^10.1.0",
-    "mocha-junit-reporter": "^2.1.0"
+    "npm-run-all2": "^6.0.2"
   },
   "cypress-cucumber-preprocessor": {
     "stepDefinitions": [
