--- a/packages/cypress/package.json
+++ b/packages/cypress/package.json
@@ -22,6 +22,7 @@
     "refapp3CarePrograms": "cypress run --spec cypress/integration/step_definitions/refapp-3.x/10-care-programs/care-programs.js"
   },
   "devDependencies": {
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.1.3",
     "@testing-library/cypress": "^8.0.0",
     "@types/uuid": "3.4.7",
     "cypress": "^10.4.0",
@@ -30,12 +31,8 @@
     "junit-report-merger": "^4.0.0",
     "npm-run-all2": "^6.0.2"
   },
-  "cypress-cucumber-preprocessor": {
-    "stepDefinitions": [
-      "cypress/integration/cucumber/step_definitions/refapp-3.x/[filepart]/*.js"
-    ]
-  },
   "dependencies": {
-    "@esbuild-plugins/node-modules-polyfill": "^0.1.4"
+    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
+    "uuid": "^9.0.0"
   }
 }
